Lösningsförslag till lab 2

--- a/courses/da361a/exercises/L01.md
+++ b/courses/da361a/exercises/L01.md
@@ -74,8 +74,40 @@ En användare stänger av ljudet på TV:n genom att trycka på mute-knappen på 
 
 Använd de element som vi gått igenom på föreläsningen.
 
-![Klassdiagram](/assets/img/TV.png)
+![Klassdiagram för en TV](/assets/img/TV.png)
 
-## Efter laborationen
+## Efter laborationen: Exempeldiagram
 
-Efter laborationen kommer exempeldiagram att läggas upp här.
+### Uppgift 1
+
+Så här ser vår gemensamma lösning ut:
+
+[![Tillståndsdiagram 1 för AI-spelaren](/assets/img/ai_player_1.min.jpg)](/assets/img/ai_player_1.jpg)
+
+[![Tillståndsdiagram 2 för AI-spelaren](/assets/img/ai_player_2.min.jpg)](/assets/img/ai_player_2.jpg)
+
+### Uppgift 2
+
+Så här ser vår gemensamma lösning ut:
+
+[![Klassdiagram 1 för Niagara](/assets/img/niagara_1.min.jpg)](/assets/img/niagara_1.jpg)
+
+[![Klassdiagram 2 för Niagara](/assets/img/niagara_2.min.jpg)](/assets/img/niagara_2.jpg)
+
+[![Klassdiagram 3 för Niagara](/assets/img/niagara_3.min.jpg)](/assets/img/niagara_3.jpg)
+
+### Uppgift 3
+
+Uppgift 3 har färdiga, definitiva lösningar. Så här ser de ut:
+
+#### Starta TVn
+
+![Sekvensdiagram för att starta en tv](/assets/img/power_on.png)
+
+#### Byta kanal
+
+![Sekvensdiagram för att byta kanal](/assets/img/choose_channel.png)
+
+#### Slå av ljudet
+
+![Sekvensdiagram för att slå av ljudet](/assets/img/mute.png)
