--- a/courses/da361a/lectures/F05.md
+++ b/courses/da361a/lectures/F05.md
@@ -1,44 +1,54 @@
 ---
 layout: instructions
-title: Föreläsning 4
+title: Föreläsning 5
 code: da361a
 ---
 
-# Mer om OOP
+# OOP med Python (1)
 
-<iframe src="//www.slideshare.net/slideshow/embed_code/key/f6bt31Di7mLxxw" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/AleksanderFabijan/python-oop-third-class" title="Python oop third class" target="_blank">Python oop third class</a> </strong> from <strong><a href="https://www.slideshare.net/AleksanderFabijan" target="_blank">Aleksander Fabijan</a></strong> </div>
-
-[Klicka här för att ladda ner PDF:n](/assets/pdf/pythonoop-thirdclass-181002142005.pdf)
-
+<iframe src="//www.slideshare.net/slideshow/embed_code/key/bzmLdSo0rC3Xxk" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/AntonTibblin/ht19-da361a-oop-med-python-1" title="HT19 - DA361A - OOP med Python (1)" target="_blank">HT19 - DA361A - OOP med Python (1)</a> </strong> from <strong><a href="https://www.slideshare.net/AntonTibblin" target="_blank">Anton Tibblin</a></strong> </div>
 
 ## Dagens exempel
 
 {% highlight python linenos %}
-# we first import the ORM
-import peewee as pw
+class Taxi:
 
-# we set the name of the Sqlite database
-db = pw.SqliteDatabase('malmoanimals.db')
-db2 = pw.SqliteDatabase('taxis.db')
+    nr_taxi_cars = 0
+    color = "Yellow"
 
-class Taxi(pw.Model):
-    driver_name = pw.TextField()
-    a_popular = pw.IntegerField()  # 1 least, 5 most
+    def __init__(self, driver_name, on_duty, cities, seats):
+        self.driver = driver_name
+        self.duty = on_duty
+        self.seats = seats
+        self.cities = cities
+        self.passengers = 0
+        Taxi.nr_taxi_cars = Taxi.nr_taxi_cars + 1
 
-    class Meta:
-        database = db2
+    @classmethod
+    def get_nr_of_cars(cls):
+        return cls.nr_taxi_cars
 
-if __name__ == "__main__":
-    # Create the table if it does not exist yet
-    try:
-        Taxi.create_table()
+    def add_passengers(self, nr_new_passengers):
+        if self.passengers + nr_new_passengers > self.seats:
+            print("Det får inte plats så många!")
+        else:
+            self.passengers += nr_new_passengers
 
-    except pw.OperationalError:
-        print("Taxi table already exists!")
+    def remove_passengers(self, nr_of_leaving_passengers):
+        if nr_of_leaving_passengers > self.passengers:
+            print("Det finns inte så många personer i bilen!")
+        else:
+            self.passengers -= nr_of_leaving_passengers
 
-    
-    first_taxi = Taxi(driver_name="Aleks", a_popular=2)
+    def __str__(self):
+        return "{} kör taxibilen som just nu har {} personer i sig".format(self.driver, self.passengers)
+                
+t1 = Taxi("Anton", True, ["Lund", "Staffanstorp", "Malmö"], 8)
 
-    first_taxi.save()
+print(t1)
+
+t1.add_passengers(2)
+
+print(t1)
 
 {% endhighlight %}
