La till lösningsförslag

--- a/courses/da361a/exercises/L02.md
+++ b/courses/da361a/exercises/L02.md
@@ -10,6 +10,8 @@ code: da361a
 
 Syftet med laborationen är att börja med repetition i form av procedurell programmering som sedan övergår till objektorienterad programmering där ni avslutningsvis kommer skapa ett klassdiagram över den klass ni gjort.
 
+[Lösningsförslag hittar ni här](/assets/zip/labb2-oop_python_da361a.zip)
+
 Tips är att ha övning 1 i en egen pythonfil (t.ex `repetition.py`) och övning 2, 3 och 4 i en annan (t.ex `dog.py`).
 {: .info}
 
