Lade upp första delen av inlämningsuppgift 1

--- a/courses/da361a/assignments/U01.md
+++ b/courses/da361a/assignments/U01.md
@@ -10,61 +10,92 @@ Betyg: G
 
 ## Uppgift
 
-Denna uppgift utgår från de fall med tillhörande beskrivning som presenterades under det första seminariet - ni kan [klicka här](/courses/da361a/exercises/L0.html) för att komma dit. Välj **ett** fall och skriv detta i kommentarsfältet på It's Learning. Uppgiften har tre delar som alla ska skickas in som en `zip` fil.
+I denna uppgift arbetar ni i grupper om tre, såsom de delats upp av Johan och Anton. Grupperna hittar ni på Canvas. Uppgiften består av två deluppgifter, vilka båda måste lösas för att ni ska bli godkända.
 
 ### Del 1 - OOA och OOD
 
-_Denna del kan utföras på det första seminariet, men kan givetvis utföras på egen hand också._
+I den här deluppgiften ska ni göra klass- och sekvensdiagram. Hur dessa ska ritas beskrivs längre ner i texten. Systemet ni ska jobba med är ett meddelandesystem, i vilket personer kan skicka enkla meddelanden mellan varandra via en server. Delsystemet Server är givet och kan bortses från helt. Det är således delsystemet Klient som ni ska designa. Klienten utgör programvaran som en användare använder i meddelandesystemet.
 
-I del 1 ska ni genomföra förarbete i form av OOA (analys) och OOD (design). Detta kan till exempel göras med skisser på papper och post-its eller digitalt - det är upp till er själva, så länge ni dokumentar allt (t.ex genom att fotografera).
+Designen av systemet ska följa tanken om boundary-, control- och entity-klasser:
 
-För att kort förtydliga OOA och OOD:
+ * Boundary-klasser har att göra med ingen eller en mycket liten del av logiken i systemet. De känner endast till control-klasser och eventuellt även andra boundary-klasser.
+ * Control-klasserna ansvarar för den övergripande logiken i systemet och behöver känna till både boundary- och entity-klasser. Control-klasserna behöver dock inte känna till alla boundary- och entitity-klasser.
+ * Entity-klasser representerar data i systemet och ansvarar för beräkningar och transformationer av denna data. Entity-klasser känner endast till andra entity-klasser och eventuellt control-klasser.
 
-**OOA**: här ska ni identifiera objekt, aktörer och operationer på systemet - samt gruppera dessa.
+#### Funktioner som ska implementeras i systemet
 
-**OOD**: här ska ni identifiera relationer mellan objekten, vad är objekt/klass och vad är attribut.
+Klientapplikationen består av ett textgränssnitt och av funktionalitet för att kommunicera med en server. Applikationen har en meny med fyra val:
 
-### Del 2 - Klass-, sekvens-, aktivitetsdiagram
+ * Koppla upp/ner
+ * Visa en lista över uppkopplade användare
+ * Skriv ett nytt meddelande
+ * Visa befintliga meddelanden i en lista. Dessa visas på följande vis:
 
-I del 2 ska ni skapa ett klassdiagram, ett sekvensdiagram och ett aktivitetsdiagram. Detta är en naturlig fortsättning på det som gjordes i del 1 och ska även göras digitalt. Vilket program ni väljer att utföra detta i är valfritt, t.ex Visual Paradigm, yUML, gliffy, Adobe Illustrator, [DrawIO](https://www.draw.io/) osv.
+> Meddelande från **Förnamn Efternamn** (**datum**):
+> **Här hamnar meddelandetexten.**
 
-**Aktivitetsdiagram**: skapa ett aktivitetsdiagram som visar flödet för den huvudsakliga funktionaliteten.
+En klient ska kunna ansluta sig till och koppla ner sig från servern, visa, skicka och ta emot meddelanden, samt visa en lista över uppkopplade användare.
 
-**Klassdiagram**: utgå från det som skissades ner i del 1 (OOD) och gör ett klassdiagram.
+#### Om klienten
 
-**Sekvensdiagram**: i del 1 identifierade ni operationer på systemet - nu ska ni göra detta som ett sekvensdiagram.
+Det finns tre givna klasser som ni utgår från. Utöver dessa får ni lägga till vilka klasser ni vill. Dessa tre klasser är:
 
-Det viktiga är att visa förståelse för helheten, dvs. att lägga ner tid på att förstå hur allting hänger ihop istället för om pilen ska vara ifylld eller inte (notation).
+##### Message
 
-**Individuell analys**: Då ovanstående delar med fördel är gjorda i grupp är det viktigt att ni själva har koll på varför diagrammen ser ut som de gör. Till alla diagram, skriv en egen sammanfattning som berättar hur diagrammen representerar fallet - samt ev. problematik med diagrammet. Totalt bör denna analys vara på cirka en sida.
+Klassen *Message* utgör superklass till samtliga meddelanden som skickas mellan klient och server. Varje typ av meddelande som ni identifierar ska ärva från denna klass. Följande publika metoder är givna:
 
-### Del 3 - Python "stubbar"
+ * *getSender()*, som returnerar ett objekt av klassen *User* (se nedan).
+ * *setSender(User)*, som sätter avsändaren av ett meddelande.
+ * *getReceptionTime()*, som returnerar en sträng. Denna sträng innehåller information om datum och tid rörande när meddelandet togs emot av servern.
+ * *getTimeOfDelivery()*, som returnerar en sträng. Denna sträng innehåller information om datum och tid rörande när meddelandet levererades till användaren.
+ * *getContents()*, som returnerar ett objekt. Detta objekt innehåller meddelandets faktiska innehåll, och varierar beroende på vilken typ av meddelande som skickas.
 
-I del 3 ska ni skapa Python "stubbar", dvs. kod som visar helheten av ett program utan någon konkret funktionalitet. Ni ska göra detta för alla de klasser som ni har i ert klassdiagram (enligt god `Python`-praxis så är varje klass i en egen `Python`-fil). För att förtydliga vad en "stubb" innebär kan ni utgå från det korta exempel som visas nedan.
+Observera att inte alla meddelanden behöver ha en mottagare, eftersom en del meddelanden bara går mellan användaren och servern (som exempelvis upp- och nedkoppling). Ett meddelande mellan användare ska dock kunna skickas till en eller flera mottagare.
 
-Exampel: vi har identifierat objektet "AlarmClock" med operationerna för att ställa klockan och att "snooza".
+##### User
 
-{% highlight python linenos %}
-class AlarmClock(object):
-    """
-    En klocka med extra funktionalitet i form av att ställa alarm.
-    """
+Klassen *User* representerar en användare. Följande publika metoder är givna:
 
-    def set_time():
-        """
-        Ställer klockan på en angiven tid i formatet HH:SS (timmar + sekunder).
-        """
-        pass
+ * *getFirstName()*, som returnerar en sträng.
+ * *setFirstName(string)*, som sätter förnamnet.
+ * *getLastName()*, som returnerar en sträng.
+ * *setLastName(string)*, som sätter efternamnet.
 
-    def snooze():
-        """
-        Ställer om alarmet till den nuvarande tiden plus tio minuter.
-        """
-        pass
-{% endhighlight %}
+##### Connection
+
+Klassen *Connection* ansvarar för kommunikationen med servern. Ni behöver inte bry er om hur meddelandena faktiskt skickas till och tas emot från servern. Följande publika metoder är givna:
+
+ * *connect()*, som skickar ett meddelandeobjekt till servern och berättar att klienten kopplar upp.
+ * *disconnect()*, som skickar ett meddelande till servern och berättar att klienten kopplar ner.
+ * *send(Message)*, som skickar ett godtyckligt meddelande till servern.
+
+Utöver dessa finns även en privat metod:
+
+ * *update(Message)*, som uppdaterar relevanta boundary-klasser med information när nya meddelanden skickas från servern. Den här metoden är abstrakt, och således även klassen, så ni behöver skapa en klass som ärver av *Connection* för att implementera ovanstående funktionalitet.
+
+#### Er uppgift
+
+##### Klassdiagram
+
+Skapa ett klassdiagram över klientapplikationen. Glöm inte att införa era egna klasser utifrån de behov ni identifierar. Diagrammet ska ha hög detaljrikedom med associationstyper, multipliciteter, viktiga attribut och metoder.
+
+##### Sekvensdiagram
+
+Rita sekvensdiagram för följande scenarier:
+ * Användaren kopplar upp klienten mot servern.
+ * Användaren kopplar ner klienten.
+ * Användaren skriver och skickar ett meddelande.
+ * Servern levererar ett meddelande till klienten.
+ * Servern levererar ett meddelande med uppkopplade användare.
+
+Tänk på att hålla klassdiagram och sekvensdiagram konsistenta med varandra!
+
+### Del 2 - Från kod till UML
+
+HÄR SKRIVER ANTON IN SIN UPPGIFT
 
 ## Inlämning
 
-_Inlämningen är individuell trots att ni kunde arbeta som grupp på seminariet - det innebär bara att alla lämnar in det ni gjorde._
+_Inlämningen görs i grupp. Detta innebär att enbart en i gruppen lämnar in lösningen. Vid enventuella problem i gruppen, prata med Johan eller Anton._
 
-Inlämning sker i form av en `zip` fil innehållande alla tre delar, det är upp till er att strukturera innehållet så länge ni är noggranna med namngivning av filer och/eller mappar. **Deadline** finner ni på Canvas.
+Inlämning sker i form av en `zip` fil innehållande upggiftens båda delar. Det är upp till er att strukturera innehållet så länge ni är noggranna med namngivning av filer och/eller mappar. **Deadline** finner ni på Canvas.
