Fixade lite med formattering

--- a/courses/da361a/assignments/U01.md
+++ b/courses/da361a/assignments/U01.md
@@ -18,9 +18,9 @@ I den här deluppgiften ska ni göra klass- och sekvensdiagram. Hur dessa ska ri
 
 Designen av systemet ska följa tanken om boundary-, control- och entity-klasser:
 
- * Boundary-klasser har att göra med ingen eller en mycket liten del av logiken i systemet. De känner endast till control-klasser och eventuellt även andra boundary-klasser.
- * Control-klasserna ansvarar för den övergripande logiken i systemet och behöver känna till både boundary- och entity-klasser. Control-klasserna behöver dock inte känna till alla boundary- och entitity-klasser.
- * Entity-klasser representerar data i systemet och ansvarar för beräkningar och transformationer av denna data. Entity-klasser känner endast till andra entity-klasser och eventuellt control-klasser.
+ * **Boundary-klasser** har att göra med ingen eller en mycket liten del av logiken i systemet. De känner endast till control-klasser och eventuellt även andra boundary-klasser.
+ * **Control-klasserna** ansvarar för den övergripande logiken i systemet och behöver känna till både boundary- och entity-klasser. Control-klasserna behöver dock inte känna till alla boundary- och entitity-klasser.
+ * **Entity-klasser** representerar data i systemet och ansvarar för beräkningar och transformationer av denna data. Entity-klasser känner endast till andra entity-klasser och eventuellt control-klasser.
 
 #### Funktioner som ska implementeras i systemet
 
@@ -31,7 +31,8 @@ Klientapplikationen består av ett textgränssnitt och av funktionalitet för at
  * Skriv ett nytt meddelande
  * Visa befintliga meddelanden i en lista. Dessa visas på följande vis:
 
-> Meddelande från **Förnamn Efternamn** (**datum**):
+> *Meddelande från **Förnamn Efternamn** (**datum**):*
+
 > **Här hamnar meddelandetexten.**
 
 En klient ska kunna ansluta sig till och koppla ner sig från servern, visa, skicka och ta emot meddelanden, samt visa en lista över uppkopplade användare.
