Fixade lite mer med formatteringen

--- a/courses/da361a/assignments/U01.md
+++ b/courses/da361a/assignments/U01.md
@@ -33,7 +33,7 @@ Klientapplikationen består av ett textgränssnitt och av funktionalitet för at
 
 > *Meddelande från **Förnamn Efternamn** (**datum**):*
 
-> **Här hamnar meddelandetexten.**
+> ***Här hamnar meddelandetexten.***
 
 En klient ska kunna ansluta sig till och koppla ner sig från servern, visa, skicka och ta emot meddelanden, samt visa en lista över uppkopplade användare.
 
