Added description of assignment 1

--- a/courses/da361a/assignments/U01.md
+++ b/courses/da361a/assignments/U01.md
@@ -93,10 +93,18 @@ Tänk på att hålla klassdiagram och sekvensdiagram konsistenta med varandra!
 
 ### Del 2 - Från kod till UML
 
-HÄR SKRIVER ANTON IN SIN UPPGIFT
+I den här deluppgiften ska ni utifrån given källkod, skapa ett klassdiagram. Vi ger inte någon introduktion till systemet, eftersom ni i grupp genom källkoden ska lista ut detta.
+
+- [Källkoden som ni ska utgå från hittar ni här](/assets/zip/as1-code.zip)
+
+Det finns totalt **sju** klasser, där varje klass har attribut, metoder, associationer. Alla funktionerna är inte implementerade just nu, det gör inget, de är så kallade *stubbar*. Några av klasserna är dokumenterade (hur bra går att diskutera), andra inte. Er uppgift är följande:
+
+1. Skapa ett klassdiagram över systemet, utifrån given källkod. Inkludera: *metoder*, *attribut*, *multiplicitet*, *associationstyper* i ert diagram.
+2. Dokumentera klart programmet. Vissa av klasserna saknas som tidigare nämt dokumentation - det är er uppgift att köra klart detta. Ni får välja vilken *stil* ni vill dokumentera efter, [här är en bra start](https://stackoverflow.com/questions/3898572/what-is-the-standard-python-docstring-format) för en översikt av olika stilar som används idag.
+3. Under tiden ni arbetar, notera vad som var svårt / otydligt i översättningen från kod till klassdiagram - samt när ni dokumenterar koden. Denna sammanfattning ska lämnas in som **PDF** i inlämningen (i er ZIP-fil).
 
 ## Inlämning
 
 _Inlämningen görs i grupp. Detta innebär att enbart en i gruppen lämnar in lösningen. Vid enventuella problem i gruppen, prata med Johan eller Anton._
 
-Inlämning sker i form av en `zip` fil innehållande upggiftens båda delar. Det är upp till er att strukturera innehållet så länge ni är noggranna med namngivning av filer och/eller mappar. **Deadline** finner ni på Canvas.
+Inlämning sker i form av en `zip` fil innehållande uppgiftens båda delar. Det är upp till er att strukturera innehållet så länge ni är noggranna med namngivning av filer och/eller mappar. **Deadline** finner ni på Canvas.
