--- a/courses/da361a/exercises/L04.md
+++ b/courses/da361a/exercises/L04.md
@@ -1,14 +1,14 @@
 ---
 layout: instructions
-title: Laboration 4
+title: Laboration 3
 code: da361a
 ---
 
-# Laboration 4
+# Laboration 3
 
 ## Introduktion
 
-Syftet med laboration 3 är att fortsätta öva på processen: beskrivning -> klassdiagram -> stubbar -> sekvensdiagram -> implementation. Där vi tillsammans utgår från ett kortare exempelcase och hjälps åt genom att diskutera kring de olika stegen i processen för att komma till ett resultat.
+Syftet med denna laboration är att fortsätta öva på processen: beskrivning -> klassdiagram -> stubbar -> sekvensdiagram -> implementation. Där vi tillsammans utgår från ett kortare exempelcase och hjälps åt genom att diskutera kring de olika stegen i processen för att komma till ett resultat.
 
 Det uppmuntras att arbeta i par för att kunna aktivt diskutera och komma fram till lösningar.
 
@@ -27,14 +27,17 @@ Tänk att butiken är huvudklassen för programmet. Det är denna klass som har 
 3. Skapa stubbar för alla klasser
 4. Skapa ett sekvensdiagram utifrån klassdiagrammet och stubbarna
 5. Behöver vi revidera klassdiagram, stubbar och sekvensdiagram?
-6. Implementera programmet (det finns en exempellösning, men gör ett försök först), kommer i slutet av labben
+6. Implementera programmet i Python
 
 ### Tips
 
 Det finns fyra stycken klasser som tillsammans utgör programmet. Den slutgiltiga funktionaliteten för programmet är att lägga till produkter (dessa behöver inte sparas i någon fil/databas, endast temporärt) och att kunna lista de sparade produkterna. Försök att komma fram till vilka metoder som behövs och koppla samman dessa till ert sekvensdiagram innan ni börjar implementera för att ha en bra grund - dock kommer dessa säkerligen att ändra sig när ni väl börjat och kanske kommer på / inser att en annan lösning passar bättre.
 
+<!--
 ## Bilagor
 
-[Klicka här för att ladda ner exempellösningen](/assets/zip/labb4_oop_da361a.zip)
+
+[Klicka här för att ladda ner exempellösningen](/assets/zip/oop2.zip)
 
 ![Sekvensdiagram](/assets/img/da361a_labb4_sequence_diagram.png) _Sekvensdiagram_
+-->
