--- a/courses/da361a/lectures/F06.md
+++ b/courses/da361a/lectures/F06.md
@@ -4,214 +4,152 @@ title: Föreläsning 5
 code: da361a
 ---
 
-# Python - Extra
+# Python - OOP med Python (2)
 
-Länkar till tidigare (och dagens) workshops:
-- [Zoo](https://docs.google.com/document/d/1BMxJLZDPKi1R80kM9xvAMddoZ-PgMsmzyiQuIONESiU/edit)
-- [Förskolesystem](http://webshare.mah.se/tsanti/Preschool.md.html)
-- [Blogg](http://webshare.mah.se/tsanti/blogg.md.html)
+<iframe src="//www.slideshare.net/slideshow/embed_code/key/msAAqVvSxi4JlW" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/AntonTibblin/ht19-da361a-oop-med-python-2" title="HT19 - DA361A - OOP med Python (2)" target="_blank">HT19 - DA361A - OOP med Python (2)</a> </strong> from <strong><a href="https://www.slideshare.net/AntonTibblin" target="_blank">Anton Tibblin</a></strong> </div>
 
 ## Dagens exempel
 
-### Ex.1 Klassattribut/klassmetoder/statistiska metoder
+### Ex.1 Arv
+
+#### Person.py
 
 {% highlight python linenos %}
-class School:
+class Person:
 
-    schools = []
-
-    def __init__(self, name):
+    def __init__(self, name, age, user_id):
         self.__name = name
-        self.students = []
-        self.courses = []
-        self.teachers = []
-        self.open = False
-
-        School.schools.append(self)
+        self.__age = age
+        self.__user_id = user_id
 
     def get_name(self):
         return self.__name
 
-    def open_school(self):
-        self.open = True
+    def set_name(self, name):
+        self.__name = name
 
-    def close_school(self):
-        self.open = False
+    def get_age(self):
+        return self.__age
 
-    @classmethod
-    def print_schools(cls):
-        for school in cls.schools:
-            print(school)
-
-    @staticmethod
-    def print_schools2():
-        for school in School.schools:
-            print(school)
-
-    @classmethod
-    def create_from_json(cls, file_name):
-        my_file = open(file_name, "r")
-        school_data = json.loads(my_file)
-        school_name = school_data["name"]
-        return cls(name)
-
-    @staticmethod
-    def validate_date(date):
-        if date = ....:
-            return True
-        else:
-            return False
-    
     def __str__(self):
-        if self.open == True:
-            return "{}: is open".format(self.__name)
-        else:
-            return "{}: is closed".format(self.__name)
-        
-schools = [School("Malmö universitet")]
-
-schools.append(School("Lunds universitet"))
-
-School.print_schools()
-School.print_schools2()
-
-'''
-for school in schools:
-    print(school.location)
-'''
-
-'''
-my_school.open_school()
-School.open_school(my_school)
-
-print(my_school)
-
-# Kalla på en klassmetod
-School.create_from_json("school.json")
-
-# Kalla på en statisk metod
-School.validate_date("2020-10-10")
-'''
+        return "{} ({})".format(self.__name, self.__age)
+    
 
 {% endhighlight %}
 
-### Ex.2 Polymorfism
+#### Student.py
 
 {% highlight python linenos %}
-class School:
+from Person import Person
 
-    def __init__(self, name, type_of_school):
-        self.__name = name
-        self.students = []
-        self.courses = []
-        self.teachers = []
-        self.type_of_school = type_of_school
-        self.open = False
-        
-    def get_name(self):
-        return self.__name
+class Student(Person):
 
-    def open_school(self):
-        self.open = True
-
-    def close_school(self):
-        self.open = False
-
-    def get_grade(self, points):
-        if points > 85:
-            return "MVG"
-        elif points > 70:
-            return "VG"
-        elif points > 50:
-            return "G"
-        else:
-            return "U"
+    def __init__(self, name, age, user_id, program):
+        self.program = program
+        super().__init__(name, age, user_id)
 
     def __str__(self):
-        if self.open == True:
-            return "{} ({}): is open".format(self.__name, self.type_of_school)
-        else:
-            return "{} ({}): is closed".format(self.__name, self.type_of_school)
-        
-
-class University(School):
-
-    def __init__(self, name):
-        super().__init__(name, "University")
+        return "Student: {} ({})".format(self.get_name(), self.get_age())
 
 
-    def get_grade(self, points):
-        if points > 75:
-            return "VG"
-        elif points > 50:
-            return "G"
-        else:
-            return "U"
+s = Student("Anna Andersson", 22, "abc123", "Informationsarkitekt")
+print(s)
+
+{% endhighlight %}
+
+#### Lecturer.py
+
+{% highlight python linenos %}
+from Person import Person
+
+class Lecturer(Person):
+
+    def __init__(self, name, age, user_id, courses):
+        self.courses = courses
+        super().__init__(name, age, user_id)
+
+l = Lecturer("Anton", 29, "abc123", ["OOP"])
+
+print(l)
+
+{% endhighlight %}
+
+### Ex. 2 Filmsamling
+
+#### Klassdiagram
+
+![Klassdiagram](/assets/img/MovieCollection.jpg)
+
+#### Main.py
+
+{% highlight python linenos %}
+from User import User
+
+class Main:
+
+    def __init__(self):
+        self.user = self.create_user()
+
+    def create_user(self):
+        user_name = input("Namn: ")
+        user_age = input("Ålder: ")
+        return User(user_name, user_age)
+
+    def start(self):
+        print("Välkommen {}".format(self.user.name))
+
+program = Main()
+program.start()
 
 
-class HighSchool(School):
+{% endhighlight %}
 
-    def __init__(self, name):
-        super().__init__(name, "High School")
+#### MovieCollection.py
 
-    def get_grade(self, points):
-        if points > 90:
-            return "A"
-        elif points > 80:
-            return "B"
-        elif points > 70:
-            return "C"
-        elif points > 60:
-            return "D"
-        elif points > 50:
-            return "E"
-        else:
-            return "F"
+{% highlight python linenos %}
+class MovieCollection:
 
-class PeopleSchool(School):
+    def __init__(self):
+        self.movies = []
 
-    def __init__(self, name):
-        super().__init__(name, "People School")
+    def add_movie(self, movie):
+        pass
 
+    def remove_move(self, movie):
+        pass
+{% endhighlight %}
 
+#### Movie.py
 
-class MiddleSchool(School):
+{% highlight python linenos %}
+class Movie:
 
-    def __init__(self, name):
-        super().__init__(name, "Middle School")
+    def __init__(self, title, year, actors, director):
+        self.title = title
+        self.year = year
+        self.actors = actors
+        self.director = director
+{% endhighlight %}
 
-    def get_grade(self, points):
-        return "You have passed the examn, as always"
+#### Person.py
 
-class CheckString:
+{% highlight python linenos %}
+class Person:
 
-    @staticmethod
-    def is_long_string(string):
-        if len(string) > 10:
-            return True
-        return False
+    def __init__(self, name, age):
+        self.name = name
+        self.age = age
+{% endhighlight %}
 
-    @staticmethod
-    def is_short_string(string):
-        if len(string) < 10:
-            return True
-        return False
-    
+#### User.py
 
-print(CheckString.is_long_string("Anton"))
-print(CheckString())
+{% highlight python linenos %}
+from Person import Person
+from MovieCollection import MovieCollection
 
-        
-schools = []
-schools.append(University("Malmö universitet"))
-schools.append(HighSchool("Polhemskolan"))
-schools.append(MiddleSchool("Centralskolan"))
-schools.append(PeopleSchool("Folkets skola"))
+class User(Person):
 
-for school in schools:
-    print(school)
-
-for school in schools:
-    print(school.get_grade(76))
-
+    def __init__(self, name, age):
+        self.movieCollection = MovieCollection()
+        super().__init__(name, age)
 {% endhighlight %}
