Added new code for examples

--- a/courses/da361a/lectures/F06.md
+++ b/courses/da361a/lectures/F06.md
@@ -84,6 +84,8 @@ print(l)
 
 {% highlight python linenos %}
 from User import User
+from Movie import Movie
+from Actor import Actor
 
 class Main:
 
@@ -97,10 +99,71 @@ class Main:
 
     def start(self):
         print("Välkommen {}".format(self.user.name))
+        self.menu()
+
+    def menu(self):
+        while True:
+            self.print_menu()
+            user_choice = input("Val: ")
+            if user_choice == "1":
+                self.show_movies()
+            elif user_choice == "2":
+                self.create_movie()
+            elif user_choice == "3":
+                pass
+            elif user_choice == "4":
+                pass
+            elif user_choice == "0":
+                break
+            else:
+                print("Du har valt ett alternativ som inte finns, försök igen.")
+
+        print("Hejdå!")        
+
+    def print_menu(self):
+        print("--- Meny")
+        print("1) Visa filmer")
+        print("2) Lägg till en film")
+        print("3) Radera en film")
+        print("4) Redigera en film")
+        print("0) Avsluta")
+        print("")
+
+    def show_movies(self):
+        for movie in self.user.movie_collection.movies:
+            print(movie)
+
+    def create_movie(self):
+        print("--- Skapa en film")
+        title = input("Titel: ")
+        year = input("Year: ")
+
+        actors = []
+
+        new_actor = input("Namn på skådespelare (lämna blank för att gå vidare): ")
+        while new_actor != "":
+            found_actor = False
+            for m_actor in self.user.movie_collection.actors:
+                if m_actor.name == new_actor:
+                    actors.append(m_actor)
+                    found_actor = True
+            
+            if found_actor == False:
+                print("Skådespelaren finns inte, ska den!")
+                new_actor_name = input("Skådespelarens namn: ")
+                new_actor_age = input("Skådespelarens ålder: ")
+                new_actor_instance = Actor(new_actor_name, new_actor_age)
+                self.user.movie_collection.add_actor(new_actor_instance)
+                actors.append(new_actor_instance)
+
+            new_actor = input("Namn på skådespelare (lämna blank för att gå vidare): ")
+
+        new_movie = Movie(title, year, actors, None)
+
+        self.user.movie_collection.add_movie(new_movie)
 
 program = Main()
 program.start()
-
 
 {% endhighlight %}
 
@@ -111,9 +174,14 @@ class MovieCollection:
 
     def __init__(self):
         self.movies = []
+        self.actors = []
+        self.directors = []
 
     def add_movie(self, movie):
-        pass
+        self.movies.append(movie)
+
+    def add_actor(self, actor):
+        self.actors.append(actor)
 
     def remove_move(self, movie):
         pass
@@ -129,6 +197,12 @@ class Movie:
         self.year = year
         self.actors = actors
         self.director = director
+
+    def __str__(self):
+        actor_names = []
+        for actor in self.actors:
+            actor_names.append(actor.name)
+        return "{} ({}): {}".format(self.title, self.year, ", ".join(actor_names))
 {% endhighlight %}
 
 #### Person.py
@@ -150,6 +224,6 @@ from MovieCollection import MovieCollection
 class User(Person):
 
     def __init__(self, name, age):
-        self.movieCollection = MovieCollection()
+        self.movie_collection = MovieCollection()
         super().__init__(name, age)
 {% endhighlight %}
