--- a/courses/da361a/exercises/L07.md
+++ b/courses/da361a/exercises/L07.md
@@ -6,6 +6,8 @@ code: da361a
 
 # Laboration 3
 
+[Ni hittar lösningsförslag här](/assets/zip/MauTwitter.zip)
+
 ## Introduction
 
 In this lab, you will familiarize yourself with peewee, an ORM solution for python, with the use of *args and **kvargs, and practice Object Oriented Programing.
