--- a/courses/da361a/exercises/L06.md
+++ b/courses/da361a/exercises/L06.md
@@ -6,6 +6,8 @@ code: da361a
 
 # Laboration 5 - MauTwitter med ORM
 
+[Ni hittar lösningsförslag här](/assets/zip/MauTwitter.zip)
+
 ## Introduktion
 
 **Jobba gärna i par i denna laboration**
