--- a/courses/da361a/assignments/U02.md
+++ b/courses/da361a/assignments/U02.md
@@ -59,9 +59,9 @@ Ytterligare funktioner (som kan behöva formuleras i nya klasser) kan exempelvis
 
 ## Inlämning
 
-Inlämningen består av fyra delar (men lämna in alla som **en** zip-fil).
+Inlämningen består av fyra delar (men lämna in alla som **en** zip-fil) och lämnas in på Canvas.
 
 1. Ett komplett klassdiagram i formatet `png` eller `jpg`
 2. Ett dokument med beskrivning över vad ni valt att modellera, lärdomar och de problem ni stött på - som en `pdf`
-3. Alla era Pythonfiler (klasser)
-4. En muntlig redovisning av koden för Anton/Aleksander
+3. Er källkod till programmet
+4. En muntlig redovisning av uppgiften (tider för redovisning kommer upp när deadline närmar sig)
