Fixed a broken link

--- a/courses/da361a/exercises/L08.md
+++ b/courses/da361a/exercises/L08.md
@@ -56,7 +56,7 @@ I [deluppgift 2](../../../assets/zip/2.zip) kommer du, om du gör rätt, att få
 
 ### Deluppgift 3
 
-I [deluppgift 3](../../../assets/zip/finish.zip] får du slutligen hämta ditt pris. Följ diagrammen och gläd dig åt hur bra du är på UML och Python när du är klar med uppgiften.
+I [deluppgift 3](../../../assets/zip/finish.zip) får du slutligen hämta ditt pris. Följ diagrammen och gläd dig åt hur bra du är på UML och Python när du är klar med uppgiften.
 
 ## Lösningsförslag
 
