--- a/courses/da361a/lectures/F10.md
+++ b/courses/da361a/lectures/F10.md
@@ -33,6 +33,6 @@ Din uppgift är att bygga en väldigt enkel mediaspelare. Den är så pass enkel
 
 Identifiera de tillstånd som behövs och modellera dem. Notera även vilka tillståndsövergångar som är tillåtna och vilka som saknas. En exempelmodell (för en bankomat i Java, men det är analogt med er Python-lösning) ser ut så här:
 
-![State pattern i Java](/assets/img/atm.png]
+![State pattern i Java](/assets/img/atm.png)
 
 Det finns ett flertal sätt att implementera State i Python, men ett rimligt exempel [finns här](https://refactoring.guru/design-patterns/state/python/example). Hur implementerar ni er lösning?
