--- a/courses/da361a/exercises/L03.md
+++ b/courses/da361a/exercises/L03.md
@@ -170,4 +170,8 @@ Lycka till!
 
 ## Exempellösning
 
+Kommer efter labbens slut.
+
+<!--
 [Exempellölsning till labben hittar ni här](/assets/zip/blackjack.zip)
+-->
