--- a/courses/da361a/exercises/L03.md
+++ b/courses/da361a/exercises/L03.md
@@ -19,7 +19,7 @@ Syftet med laborationen är att ni ska få förståelse för hur ni kan använda
 
 ## Uppgift
 
-Som tidigare nämnt är er uppgift att implementera spelet Blackjack, nedan visas det klassdiagram ni ska utgå ifrån:
+Som tidigare nämnt är er uppgift att implementera spelet Blackjack, nedan visas det klassdiagram ni kan utgå ifrån:
 
 ![Klassdiagram över Blackjack](/assets/img/da361a_labb3_class_diagram.png) _Klassdiagram över Blackjack._
 
